--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="GemCart - Jewelry & Watches Marketplace" />
-    <title>💎 GemCart</title>
+    <title>GemCart - Luxury Jewelry</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
