--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="GemCart - Jewelry & Watches Marketplace" />
+    <meta name="description" content="GemCart - Premium Jewelry & Luxury Watches Marketplace" />
     <title>GemCart - Luxury Jewelry</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
